--- a/BinareCode_Minimax/MainWindow.xaml
+++ b/BinareCode_Minimax/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BinareCode_Minimax.MainWindow"
+﻿<Window x:Class="MiniMaxGame.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
